--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 </body>
 
     <!-- script to hookup notification and db changes -->
-<script src="inc/socket.io.js"></script>
+<!-- <script src="inc/socket.io.js"></script>
 <script>
     WEB_SOCKET_SWF_LOCATION = 'inc/WebSocketMain.swf';
     var socket = io.connect('http://localhost:5000');
@@ -25,6 +25,6 @@
     socket.on('update', function (data) {
         console.log(data.message.payload);
     });
-</script>
+</script> -->
 
 </html>
